<resources>
    <string name="app_name">Изучение Английского</string>
    <string name="dashboard_title">Главная</string>
    <string name="lesson_title">Урок</string>
    <string name="profile_title">Профиль</string>
    <string name="start_lesson">Начать урок</string>
    <string name="user_profile">Профиль пользователя</string>
    <string name="learning_dashboard">Панель обучения</string>
    <string name="lesson_view">Просмотр урока</string>
    <string name="streak_format">%d дн.</string>
    <string name="xp_format">%d XP</string>
    <string name="daily_streak">Серия занятий</string>
    <string name="total_xp">Всего опыта</string>
    <string name="continue_label">Учиться</string>
    <string name="start_random_practice">Случайная тренировка</string>
    <string name="practice_desc">Закрепите знания из разных тем</string>
    <string name="translate_sentence">Переведите это предложение:</string>
    <string name="check_button">Проверить</string>
    <string name="correct">Правильно!</string>
    <string name="incorrect">Неправильно. Попробуйте еще раз!</string>
    <string name="select_option">Пожалуйста, выберите вариант</string>
    <string name="select_words">Пожалуйста, выберите слова</string>
    <string name="lesson_completed">Урок завершен!</string>
    <string name="lesson_completed_msg">Вы отлично справились!\n\nЗаработано опыта: %1$d XP\nДопущено ошибок: %2$d\nЗатраченное время: %3$02d:%4$02d</string>
    <string name="finish_button">Завершить</string>
    <string name="target_sentence_hint">Ваш ответ появится здесь</string>
    <string name="status_not_started">Не начато</string>
    <string name="status_completed">Завершено</string>
    <string name="status_in_progress">В процессе</string>
    <string name="emoji_fire">🔥</string>
    <string name="emoji_gem">💎</string>
    <string name="emoji_party">🎉</string>
    <string name="emoji_target">🎯</string>
    <string name="emoji_clock">⏱️</string>
    <string name="stat_xp">Опыт</string>
    <string name="stat_errors">Ошибки</string>
    <string name="stat_time">Время</string>
    <string name="stat_streak">Серия дней</string>
    <string name="label_statistics">Статистика</string>
    <string name="label_activity">Активность за месяц</string>
    <string name="stat_activity_hint">Занятие было</string>
    <string name="profile_default_name">Ученик</string>
    <string name="profile_default_rank">Новичок в английском</string>
    <string name="rank_master">Мастер английского</string>
    <string name="rank_advanced">Продвинутый ученик</string>
    <string name="rank_beginner">Новичок в английском</string>

    <plurals name="xp_count">
        <item quantity="one">%d очко опыта</item>
        <item quantity="few">%d очка опыта</item>
        <item quantity="many">%d очков опыта</item>
        <item quantity="other">%d очка опыта</item>
    </plurals>

    <string name="sandbox_title">Лаборатория</string>

    <string name="notification_channel_name">Обучение</string>
    <string name="notification_title">Урок пройден!</string>
    <string name="notification_content">Поздравляем! Вы стали на шаг ближе к цели.</string>

    <string name="login_title">Вход</string>
    <string name="register_title">Регистрация</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="name_hint">Имя</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="no_account">Нет аккаунта? Зарегистрироваться</string>
    <string name="has_account">Уже есть аккаунт? Войти</string>
    <string name="auth_welcome">Добро пожаловать!</string>
    <string name="auth_subtitle">Изучайте английский весело</string>
    <string name="label_account">Аккаунт</string>
    <string name="logout_button">Выйти из аккаунта</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="account_info">Настройки аккаунта</string>
</resources>
